# DungeonCrawler

./: AbstractUI.cpp  AbstractUI.h  Active.cpp  Active.h  CMakeLists.txt  Door.cpp  Door.h  DungeonCrawler.cpp  DungeonCrawler.h  Level.cpp  Level.h  Npc.cpp  Npc.h  Passive.cpp  Passive.h  Pit.cpp  Pit.h  Praktikum1.pro  Ramp.cpp  Ramp.h  Switch.cpp  Switch.h  TerminalUI.cpp  TerminalUI.h  character.cpp  character.h  floor.cpp  floor.h  main.cpp  portal.cpp  portal.h  tile.cpp  tile.h  wall.cpp  wall.h
